--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ body {
     overflow-x: hidden;
 }
 
+body, html {
+    height: auto;
+    overflow-y: auto;
+}
+
+
 a {
     text-decoration: none;
     color: inherit;
@@ -273,7 +279,7 @@ nav ul li a:focus::after {
     align-items: center;
     justify-content: center;
     text-align: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     color: var(--pure-white);
     
 }
@@ -591,6 +597,23 @@ nav ul li a:focus::after {
     transform: translateY(-5px);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 }
+
+.fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.8s ease;
+}
+
+.no-js .fade-in {
+    opacity: 1;
+    transform: none;
+}
+
 
 .timeline-content::before {
     content: '';
